# joinemm-dev-backend

./: .env.example  .gitignore  Cargo.toml  README.md  filter.json.example
src/: discord.rs  handlers.rs  main.rs  structs.rs
