[package]
name = "joinemm-dev-backend"
version = "0.1.0"
authors = ["Joinemm"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix-rt = "1.0.0"
actix-service = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["json"] }
kankyo = "0.3"
env_logger = "0.7"
log = "0.4"